--- a/templates/frontend/components/layout.html
+++ b/templates/frontend/components/layout.html
@@ -26,6 +26,7 @@
 
 		<!-- Custom stylesheet -->
 		<link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}">
+		<link type="text/css" rel="stylesheet" href="{% static 'css/cart_custom.css' %}">
 
 		<!-- Favicon -->
 		<link rel="icon" href="{% static 'img/logo.png' %}">
