--- a/templates/frontend/components/navbar.html
+++ b/templates/frontend/components/navbar.html
@@ -1,8 +1,10 @@
-<nav id="navigation">
+{% load static %}
+{% load custom_filters %}
+<nav id="navigation" style="position:sticky; top:0; width: 100%;z-index: 1000;">
     <!-- container -->
     <div class="container">
         <!-- responsive-nav -->
-        <div id="responsive-nav">
+        <div id="responsive-nav" style="display: flex; justify-content: space-between; align-items: center;">
             <!-- NAV -->
             <ul class="main-nav nav navbar-nav">
                 <li class="active"><a href="/">Trang chủ</a></li>
@@ -13,6 +15,62 @@
                 <li><a href="{% url 've_chung_toi' %}">Về chúng tôi</a></li>
 
             </ul>
+            <div class="dropdown" style="position:relative;">
+                <a class="custom-cart-toggle dropdown-toggle" data-toggle="dropdown" aria-expanded="true" id="customCartDropdownBtn">
+                    <i class="fa fa-shopping-cart"></i>
+                    <span>Giỏ hàng</span>
+                    <div class="qty">
+                        {% if request.session.user_id %}
+                            {{ request.session.quantity }}
+                        {% else %}
+                            0
+                        {% endif %}
+                    </div>
+                </a>
+                <div class="custom-cart-dropdown" aria-labelledby="customCartDropdownBtn">
+                    {% if request.session.quantity != 0 and request.session.user_id %}
+                        <div class="cart-list">
+                            {% for item in request.session.cart_details %}
+                            <div class="product-widget">
+                                <div class="product-img">
+                                    <img src="{% static item.product_image %}" alt="">
+                                </div>
+                                <div class="product-body">
+                                    <h3 class="product-name">
+                                        <a href="{% url 'product_detail' item.product_id %}">
+                                            {{ item.product_name|truncatechars:60 }}
+                                        </a>
+                                    </h3>
+                                    <h4 class="product-price">
+                                        <span class="qty">{{ item.quantity }}x</span>
+                                        {{ item.product_price|currency_format }}
+                                    </h4>
+                                </div>
+                                <a href="{% url 'remove_from_cart' item.product_id %}" class="delete" title="Xóa khỏi giỏ hàng">
+                                    <i class="fa fa-close"></i>
+                                </a>
+                            </div>
+                            {% endfor %}
+                        </div>
+                        <div class="cart-summary">
+                            <small>{{ request.session.quantity }} sản phẩm đã chọn</small>
+                        <h5>TẠM TÍNH: {{ request.session.cart_total|currency_format }}</h5>
+                        </div>
+                        <div class="cart-btns" style="width: 100%;">
+                            <a href="{% url 'cart' %}">Xem giỏ hàng</a>
+                        </div>
+                    {% else %}
+                        <div class="cart-empty">
+                            <i class="fa fa-shopping-basket" style="font-size: 34px; margin-bottom: 9px; color: #e53935; display: block;"></i>
+                            Không có sản phẩm nào trong giỏ hàng
+                        </div>
+                        <div class="cart-summary">
+                            <small>0 sản phẩm đã chọn</small>
+                            <h5>TẠM TÍNH: 0 vnđ</h5>
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
             <!-- /NAV -->
         </div>
         <!-- /responsive-nav -->
