--- a/templates/frontend/pages/homepage.html
+++ b/templates/frontend/pages/homepage.html
@@ -12,10 +12,11 @@
 	<div class="container">
 		<!-- row -->
 		<div class="row">
-			{% for category in categories|slice:":12" %}
+			{% for category in categories|slice:":5" %}
 			<div class="col-md-4 col-xs-6">
+				<a href="{% url 'view_products_by_category' category.id 1 %}">
 				<div class="shop">
-					<div class="shop-img" style="background-color: white;">
+					<div class="shop-img" style="background-color: #c60928;">
 						<img src="{% static category.image_url %}" alt=""
 							style="height: 200px; object-fit: contain;object-position: right;">
 					</div>
@@ -25,8 +26,24 @@
 								class="fa fa-arrow-circle-right"></i></a>
 					</div>
 				</div>
+				</a>
 			</div>
 			{% endfor %}
+			<div class="col-md-4 col-xs-6">
+				<a href="{% url 'categories' %}">
+				<div class="shop">
+					<div class="shop-img" style="background-color: #c60928;">
+						<img src="{% static 'images/category/no-image.jpg' %}" alt=""
+							style="height: 200px; object-fit: contain;object-position: right;">
+					</div>
+					<div class="shop-body" >
+						<h3>Xem thêm các danh mục còn lại</h3>
+						<a href="{% url 'categories' %}" class="cta-btn">Đến ngay <i
+								class="fa fa-arrow-circle-right"></i></a>
+					</div>
+				</div>
+				</a>
+			</div>
 		</div>
 		<!-- /row -->
 	</div>
@@ -53,7 +70,7 @@
 					<div class="products-tabs">
 						<!-- tab -->
 						<div id="tab3" class="tab-pane active">
-							<div class="products-slick row" data-nav="#slick-nav-3">
+							<div id="brand-slick" class="products-slick row" data-nav="#slick-nav-3">
 								{% for brand in brands %}
 								<div class="col-md-2 col-xs-4">
 									<div class="product">
@@ -101,7 +118,7 @@
 					<div class="products-tabs">
 						<!-- tab -->
 						<div id="tab1" class="tab-pane active">
-							<div class="products-slick" data-nav="#slick-nav-1">
+							<div class="product-slick products-slick" data-nav="#slick-nav-1">
 								{% for product in 10_products_early %}
 								<div class="col-md-3 col-xs-6">
 									<div class="product">
@@ -139,12 +156,11 @@
 											</h4>
 										</div>
 										<div class="add-to-cart">
-											{% url 'add_to_cart' product.id as add_to_cart_url %}
-											<button onclick="window.location.href='{{ add_to_cart_url }}'"
-												class="add-to-cart-btn">
+											<a href="{% url 'add_to_cart' product.id %}" 
+												class="add-to-cart-btn " style="display: block;">
 												<i class="fa fa-shopping-cart"></i>
 												Thêm vào giỏ hàng
-											</button>
+											</a>
 										</div>
 									</div>
 								</div>
@@ -232,7 +248,7 @@
 					<div class="products-tabs">
 						<!-- tab -->
 						<div id="tab2" class="tab-pane fade in active">
-							<div class="products-slick" data-nav="#slick-nav-2">
+							<div class="product-slick products-slick" data-nav="#slick-nav-2">
 								{% for product in products_top_selling %}
 								<div class="product">
 									<div class="product-img">
@@ -281,10 +297,10 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="newsletter">
-					<p>Sign Up for the <strong>NEWSLETTER</strong></p>
+					<p>Đăng ký để nhận nhiều <strong>ƯU ĐÃI</strong></p>
 					<form>
-						<input class="input" type="email" placeholder="Enter Your Email">
-						<button class="newsletter-btn"><i class="fa fa-envelope"></i> Subscribe</button>
+						<input class="input" type="email" placeholder="NHập email của bạn vào đây">
+						<button class="newsletter-btn"><i class="fa fa-envelope"></i> GỬI</button>
 					</form>
 					<ul class="newsletter-follow">
 						<li>
