--- a/templates/frontend/pages/products_brand.html
+++ b/templates/frontend/pages/products_brand.html
@@ -63,7 +63,7 @@
 						<!-- /store top filter -->
 
 						<!-- store products -->
-						<div class="row">
+						<div class="product-slick row">
 							{% for product in products %}
 								<div class="col-md-3 col-xs-6">
 									<div class="product">
@@ -102,9 +102,9 @@
 												<del class="product-old-price">{{ product.old_price|currency_format }}</del>
 											</h4>
 										</div>
-										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-										</div>
+										<a href="{% url 'add_to_cart' product.id %}" class="add-to-cart">
+											<button class	="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+										</a>
 									</div>
 								</div>
 							{% endfor %}
