--- a/templates/backend/components/sidebar.html
+++ b/templates/backend/components/sidebar.html
@@ -36,10 +36,10 @@
                     <div class="sb-nav-link-icon"><i class="fas fa-shopping-cart"></i></div>
                     Quản lý đơn hàng
                 </a>
-                <a class="nav-link" href="{% url 'admin_aiagent' %}">
+                <!-- <a class="nav-link" href="{% url 'admin_aiagent' %}">
                     <div class="sb-nav-link-icon"><i class="fas fa-robot"></i></div>
                     AI Agent
-                </a>
+                </a> -->
                 <div class="sb-sidenav-menu-heading">Tài khoản</div>
                 <a class="nav-link" href="{% url 'dashboard_logout' %}">
                     <div class="sb-nav-link-icon"><i class="fas fa-sign-out-alt"></i></div>
