--- a/templates/backend/components/layout.html
+++ b/templates/backend/components/layout.html
@@ -44,9 +44,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="{% static 'backend/js/scripts.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script src="{% static 'backend/assets/demo/chart-area-demo.js' %}"></script>
-    <script src="{% static 'backend/assets/demo/chart-bar-demo.js' %}"></script>
+    {# Chart.js demo scripts removed; pages will include their own charts if needed #}
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
     <script src="{% static 'backend/js/datatables-simple-demo.js' %}"></script>
