--- a/templates/frontend/pages/search.html
+++ b/templates/frontend/pages/search.html
@@ -35,7 +35,7 @@
 
 					<!-- STORE -->
 					<div id="store" class="col-md-12">
-						<div class="row">
+						<div class="product-slick row">
 							{% for product in products %}
 								<div class="col-md-3 col-xs-6">
 									<div class="product">
@@ -57,7 +57,7 @@
 												{{product.category}}
 											</p>
 											<h3 class="product-name">
-												<a href="#" style="height: 39px; 
+												<a href="{% url 'product_detail' product.id %}" style="height: 39px; 
 												display: -webkit-box;
 												-webkit-line-clamp: 2;
 												-webkit-box-orient: vertical;
@@ -74,9 +74,9 @@
 												<del class="product-old-price">{{ product.old_price|currency_format }}</del>
 											</h4>
 										</div>
-										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-										</div>
+										<a href="{% url 'add_to_cart' product.id %}" class="add-to-cart">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
+										</a>
 									</div>
 								</div>
 							{% endfor %}
