--- a/templates/frontend/pages/homepage.html
+++ b/templates/frontend/pages/homepage.html
@@ -252,7 +252,7 @@
 								{% for product in products_top_selling %}
 								<div class="product">
 									<div class="product-img">
-										<img src="{% static product.image_url %}" alt="">
+										<img src="{% static product.image_url %}" alt="" style="aspect-ratio: 1/1;">
 										<div class="product-label">
 											{% for tag in product.tags|split_and_upper %}
 											<span class="new">{{ product.tags }}</span>
@@ -260,17 +260,36 @@
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">{{product.category}}</p>
-										<h3 class="product-name"><a href="#">{{product.name}}</a></h3>
-										<h4 class="product-price">
-											{{ product.price|currency_format }}
-											<del class="product-old-price">{{ product.old_price|currency_format }}</del>
+										<p class="product-category" style="height: 30px; 
+												overflow: hidden; text-overflow: ellipsis; text-wrap: wrap;">
+											{{product.category}}
+										</p>
+										<h3 class="product-name">
+											<a href="{% url 'product_detail' product.id %}" style="height: 39px; 
+												display: -webkit-box;
+												-webkit-line-clamp: 2;
+												-webkit-box-orient: vertical;
+												overflow: hidden;
+												text-overflow: ellipsis;
+												line-height: 18px;">
+												{{product.name}}
+											</a>
+										</h3>
+										<h4 class="product-price"
+											style="display: flex;flex-direction: column; align-items: center;">
+											<span>
+												{{ product.price|currency_format }}
+											</span>
+											<del class="product-old-price">
+												{{product.old_price|currency_format}}</del>
 										</h4>
-										<p class="product-category">Đã bán: {{product.number_of_sell}}</p>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Thêm vào
-											giỏ hàng</button>
+										<a href="{% url 'add_to_cart' product.id %}" 
+											class="add-to-cart-btn " style="display: block;">
+											<i class="fa fa-shopping-cart"></i>
+											Thêm vào giỏ hàng
+										</a>
 									</div>
 								</div>
 								{%endfor%}
