--- a/templates/frontend/components/search.html
+++ b/templates/frontend/components/search.html
@@ -2,7 +2,7 @@
     <div class="header-search">
         <form style="display: flex;" method="get" action="{% url 'search' %}" >
             <select class="input-select" name="category_id" style="width: 100px;">
-                <option value="0">Tất cả danh mục</option>
+                <option selected value="0">Tất cả danh mục</option>
                 {% for category in categories %}
                     <option value="{{ category.id }}" {% if category_id|add:"" == category.id|add:"" %}selected{% endif %}>{{ category.name }}</option>
                 {% endfor %}
